--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body {
   font-family: sans-serif;
   padding: 16px;
+  max-width: 560px;
+  width: 560px;
+  margin: auto;
+  background-color: white;
 }
 
 h1 {
@@ -15,12 +19,13 @@ h2 {
 }
 
 p, li {
-  font-size: 15px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 300;
-  line-height: 2em;
-  letter-spacing: .06em;
+  line-height: 1.5em;
+  letter-spacing: 0.5;
   color: #555;
+  word-wrap: break-word;
 }
 
 .bold {
