--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -79,5 +79,12 @@
         <li>CS 1102 Intro Program Design</li>
       </ul>
     </div>
+
+    <footer>
+      <i>No, I am not actually <span matTooltip="Not COMPLETELY, anyways">completely insane</span>, I just wanted to
+        have a little fun with this project.</i>
+      <br>
+      <a href="https://github.com/c7c8/a1-gettingstarted"><img src="../../assets/gh-logo.png"></a>
+    </footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
