--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -41,3 +41,15 @@ p {
   margin-right: 2em;
   margin-left: 2em;
 }
+
+footer {
+  text-align: center;
+  margin-top: 10em;
+  color: rgba(0, 0, 0, .40);
+}
+
+footer img {
+  margin: 5px;
+  opacity: .4;
+  width: 25px;
+}
