Add link to main Ravana page, update README.md

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -26,6 +26,7 @@
       <span>A1-C7C8: "Hello World" Project</span>
     </mat-toolbar>
 
+    <p ><a id="back" href="../">&lt;&lt; Ravana home</a></p>
     <div class="personal-info" id="personal-info">
       <h1>Personal Information</h1>
       <mat-card>
@@ -84,7 +85,7 @@
       <i>No, I am not actually <span matTooltip="Not COMPLETELY, anyways">completely insane</span>, I just wanted to
         have a little fun with this project.</i>
       <br>
-      <a href="https://github.com/c7c8/a1-gettingstarted"><img src="../../assets/gh-logo.png"></a>
+      <a href="https://github.com/c7c8/a1-gettingstarted"><img src="assets/gh-logo.png"></a>
     </footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
