--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,26 @@
 body{
-    background-color: darksalmon;
+    background-color:seashell;
+}
+
+h1{
+    text-align: center;
+}
+
+h3{
+    text-align: center;
+    text-shadow: initial;
+}
+
+p{
+    text-align: center;
+}
+
+table{
+    border-collapse: collapse;
+    width:auto;
+}
+
+td{
+    border: 1px solid black;
+    text-align: center;
 }
