--- a/styles.css
+++ b/styles.css
@@ -65,8 +65,6 @@ a {
 	padding-top: 50px;
 }
 
-
-
 .info-section {
 	padding-top: 70px;
 	padding-right:70px;
@@ -150,13 +148,14 @@ a {
 }
 
 .tech-details-name{
+	width: 33%;
 	font: 16px Montserrat;
 	font-weight: 70;
 }
 
 span {
 	font-weight: bold;
-	font-size: 22px;
+	font-size: 19px;
 }
 
 .project-section {
@@ -183,6 +182,7 @@ span {
 	list-style: disc;
 	padding-right: 50px;
 	font: 20px Open Sans;
+	padding-bottom: 50px;
 }
 
 footer {
