--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ h1{
     text-align: center;
 }
 
+h2{
+    text-align: center;
+}
+
 h3{
     text-align: center;
     text-shadow: initial;
@@ -23,4 +27,11 @@ table{
 td{
     border: 1px solid black;
     text-align: center;
+}
+
+li{
+    text-align:left;
+    width:50%;
+    margin-left:30%;
+    margin-right:auto;
 }
