--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: powderblue;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
 
 }
 .tooltip {
