--- a/style.css
+++ b/style.css
@@ -5,30 +5,38 @@ body {
   color: black;
 }
 #left {
+  line-height: 1.4em;
+  color: #5E7663;
   float: left;
   margin-right: 15px;
   margin-left: 20px;
  background:#D8EDDD;
- width:400px;
- height:520px;
- padding: 1em;
- padding-top: 8em;
+ width:280px;
+ height:620px;
+ padding-left: 2em;
+ padding-right: 1em;
+ padding-top: 4em;
 }
 #center {
+  text-align: center;
   float: left;
+  color: #5E6276;
  background:#CADFF4;
- width:400px;
+ width:600px;
  height:660px;
  padding: 1em;
  margin-right: 15px;
  margin-left: 15px;
 }
 #right {
+  line-height: 1.5em;
   float: left;
+  color: #6E5E76;
  background:#E7D8ED;
- width:400px;
- height:520px;
- padding: 1em;
+ width:280px;
+ height:540px;
+ padding-left: 2em;
+ padding-right: 1em;
  padding-top: 8em;
  margin-right: 20px;
  margin-left: 15px;
