--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+html {
+	background-color:  #ecf7f9;
+	max-width: 700px;
+	margin-top: 1em;
+    margin-left: 1em;
+}
+
 body {
-	font-family: "Tahoma";
+	font-family: "Verdana";
 }
