--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
  /* Custom Styles by Daniel McDonough 8/28*/
 
-
+/*type writer animation to more over text*/
 .typewriter h1,h2 {
   overflow: hidden;  /* hide space overtime */
   border-right: .15em solid #000000; /* cursor */
@@ -19,7 +19,7 @@
   animation-fill-mode: forwards;
 }
 
-/* mobile styling for h2*/
+/* mobile styling for h2 (simulates endless blinking at the end)*/
 .typewriter h2 {
   text-align:center;
   font-size: 3.0vw;
@@ -32,6 +32,18 @@
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
 }
+
+/* popcontent anfter type animation*/
+.show-content{
+  opacity:0;
+  -webkit-animation: show-content 2s steps(20, end);
+  animation: show-content 2s steps(20, end);
+  -webkit-animation-delay: 5s;
+  animation-delay: 5s;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+}
+
 
 /*bigger headers*/
 .card-title{
@@ -152,18 +164,10 @@ a:visited {
 }
 /*show content after type animation*/
 @keyframes show-content {
-  0% {
-    opacity: none;
-  }
-  100%{
-    opacity: 1;
-  }
+  from{  opacity:0   }
+  to{  opacity:1  }
 }
 @-webkit-keyframes show-content {
-  0% {
-    opacity: none;
-  }
-  100%{
-    opacity: 1;
-  }
+  from{  opacity:0   }
+  to{  opacity:1  }
 }
