--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 body {
   font-family: helvetica;
   font-size:20px;
-  background-color: ivory;
+  background:-webkit-linear-gradient(left,#D8EDDD,#CADFF4,#E7D8ED);
+  background:linear-gradient(to right,#D8EDDD,#CADFF4,#E7D8ED);
   color: black;
 }
 #left {
   line-height: 1.4em;
-  color: #5E7663;
+  color: #4B8354;
   float: left;
   margin-right: 15px;
   margin-left: 20px;
- background:#D8EDDD;
+ background:(#D8EDDD 10%);
  width:280px;
  height:620px;
  padding-left: 2em;
@@ -20,9 +21,9 @@ body {
 #center {
   text-align: center;
   float: left;
-  color: #5E6276;
- background:#CADFF4;
- width:600px;
+  color: #4B5683;
+ background:(#CADFF4 10%);
+ width:595px;
  height:660px;
  padding: 1em;
  margin-right: 15px;
@@ -31,8 +32,8 @@ body {
 #right {
   line-height: 1.5em;
   float: left;
-  color: #6E5E76;
- background:#E7D8ED;
+  color: #694B83;
+ background:(#E7D8ED 10%);
  width:280px;
  height:540px;
  padding-left: 2em;
@@ -41,3 +42,10 @@ body {
  margin-right: 20px;
  margin-left: 15px;
 }
+#line{
+  float: left;
+  margin-top: 100px;
+   height: 580px;
+   width: 3px;
+   background:radial-gradient(#28404C,transparent);
+ }
