--- a/style.css
+++ b/style.css
@@ -9,43 +9,43 @@ body {
   line-height: 1.4em;
   color: #4B8354;
   float: left;
-  margin-right: 15px;
-  margin-left: 20px;
  background:(#D8EDDD 10%);
- width:280px;
- height:620px;
- padding-left: 2em;
- padding-right: 1em;
- padding-top: 4em;
+ width:20%;
+ height:80%;
+ padding-left: 3%;
+ padding-right: 1%;
+ padding-top: 5%;
+ margin-right: 1%;
+ margin-left: 1%;
 }
 #center {
   text-align: center;
   float: left;
   color: #4B5683;
  background:(#CADFF4 10%);
- width:595px;
- height:660px;
+ width:40%;
+ height:80%;
  padding: 1em;
- margin-right: 15px;
- margin-left: 15px;
+ margin-right: 1%;
+ margin-left: 1%;
 }
 #right {
   line-height: 1.5em;
   float: left;
   color: #694B83;
  background:(#E7D8ED 10%);
- width:280px;
- height:540px;
- padding-left: 2em;
- padding-right: 1em;
- padding-top: 8em;
- margin-right: 20px;
- margin-left: 15px;
+ width:20%;
+ height:80%;
+ padding-left: 3%;
+ padding-right: 1%;
+ padding-top: 10%;
+ margin-right: 1%;
+ margin-left: 1%;
 }
 #line{
   float: left;
-  margin-top: 100px;
-   height: 580px;
-   width: 3px;
+  margin-top: 6%;
+   height: 80%;
+   width: .2%;
    background:radial-gradient(#28404C,transparent);
  }
