--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ body {
   float: left;
   color: #4B5683;
  background:(#CADFF4 10%);
- width:40%;
+ width:42%;
  height:80%;
- padding: 1em;
+ padding: 1.5%;
  margin-right: 1%;
  margin-left: 1%;
 }
