added info to index, renamed style.css

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
-	h1 {
+	h1, h2 {
 		font-family: "georgia";
 	}
 
 	body {
-		background-color: palegreen;
+		background-color: mintcream;
+	}
+
+	p {
+		font-family: "helvetica";
 	}
