--- a/style.css
+++ b/style.css
@@ -1,81 +1,51 @@
-body{
-	color: #baaa55;
+body {
+	color: white;
 	text-align: center;
-	font-weight: bold;
-	font-family: 'Libre Baskerville', serif;
+	font-family: 'Orbitron', sans-serif;
+	padding: 10em;
+	background: linear-gradient(to right, #2C2C2C, #1E2E39, #1E2E39, #2C2C2C);
 }
 
-.parallax {
-	background-attachment: fixed;
-	background-position: center;
-	background-size: contain;
+canvas {
+	display: block;
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	background-repeat: repeat;
+	z-index: -1;
 }
 
 h1 {
-	font-size: 5em;
+	font-size: 4em;
+	padding: 1em;
+}
+
+p {
+	font-size: 1.5em;
+	width: 100%
 }
 
 h2 {
+	padding: 2em;
 	font-size: 3em;
-}
-
-.table {
-	width: 60%;
-	margin: 5%;
-	margin-left: 20%;
-	margin-right: 20%;
-	text-align: center;
-	font-family: 'Nixie One', cursive;
-	font-size: 1.5em;
-	background: #253b35;
 }
 
 a {
 	color: white;
 }
 
-a:hover {
-	color: white;
+.row {
+	display: flex;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+	align-items: center;
 }
 
-a:visited {
-	color: #89b686;
-}
-
-#exp-title {
-	color: #baaa55;
-}
-
-#exp-title:hover {
-	color: #baaa55;
-}
-
-#exp-title:visited {
-	color: #89b686;
-}
-
-
-.intro {
-	background-image: url(/introbg.jpg);
-	background-size: contain;
-}
-
-.interests {
-	background-image: url(/interestsbg.jpg);
-	background-size: contain;
-}
-
-.courses {
-	background-image: url(/coursesbg.jpg);
-	background-size: contain;
-}
-
-.experience {
-	background-image: url(/expbg.jpg);
-	background-size: contain;
-}
-
-.education {
-	background-image: url(/educationbg.jpg);
-	background-size: contain;
+.row-title {
+	font-weight: bold;
+	color: #CF8B30;
 }
