--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ a:hover {
     background-color: transparent;
     text-decoration: underline;
 }
+
+* {
+    font-family: HelveticaNeue-Light;
+}
+
 body {
     background-color: lightblue;
 }
