--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ a:hover {
 
 * {
     font-family: HelveticaNeue-Light;
+    font-size: 20;
 }
 
 body {
@@ -26,6 +27,7 @@ body {
 
 h1 {
     text-align: center;
+    font-size: 30;
 }
 
 .div-container {
