--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@
 
 body{
   text-align:center;
+
+  width:500px;
+  padding-top:10px;
+  padding-right:20px;
+  padding-left:20px;
+  padding-bottom:10px;
 }
 
 html{
