--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 body{
   text-align:center;
 
-  width:1000px;
+  width:800px;
   padding-top:10px;
   padding-right:20px;
   padding-left:20px;
@@ -20,6 +20,7 @@ body{
 }
 
 html{
-  background:#cccfff;
+  background:#cfefff;
   /* #66ff66 for an extreme */
+  text-align:center;
 }
