--- a/style.css
+++ b/style.css
@@ -8,11 +8,15 @@
   border-left-style:solid;
   border-bottom-style:dotted;
 }
+.longtext{
+  padding-right:25px;
+  padding-left:25px;
+}
 
 body{
   text-align:center;
   margin:auto;
-  
+
   width:800px;
   padding-top:10px;
   padding-right:20px;
