--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@ img.ava {
 	margin-right: auto;
 } 
 
-.topnav {
+.nav {
     background-color: #333;
 
 }
 
 /* Style the links inside the navigation bar */
-.topnav a {
+.nav a {
     float: right;
     color: black;
     font-family: Times;
@@ -33,13 +33,13 @@ img.ava {
 }
 
 /* Change the color of links on hover */
-.topnav a:hover {
+.nav a:hover {
     background-color: #ddd;
     color: black;
 }
 
 /* Add a color to the active/current link */
-.topnav a.active {
+.nav a.active {
     background-color: #4CAF50;
     color: white;
 }
