--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,35 @@ h3 {
   text-align: center;
 }
 
+* {box-sizing:border-box}
+
+.container_skills {
+    width: 100%;
+    background-color: #f1ececb0;
+}
+
+.skills {
+    text-align: right;
+    padding: 5px;
+    color: white;
+}
+
+.title_html {width:100%; text-align: center; background-color: #4e020b;}
+.title_css {width:100%; text-align: center; background-color: #9c0013;}
+.title_js {width:100%; text-align: center; background-color: #ceb417;}
+.title_python {width:100%; text-align: center; background-color: #647320;}
+.title_java {width:100%; text-align: center; background-color: #0f7896;}
+.title_ruby {width:100%; text-align: center; background-color: #47899c;}
+.title_ut {width:100%; text-align: center; background-color: #51516d;}
+
+.html {width: 40%; background-color: #790412;}
+.css {width: 20%; background-color: #D0021B;}
+.js {width: 25%; background-color: #F9DA1C;}
+.python {width: 15%; background-color: #899E2A;}
+.java {width: 60%; background-color: #1498BE;}
+.ruby {width: 5%; background-color: #60BAD5;}
+.ut {width: 35%; background-color: #6F6F96;}
+
 /*
 Test hyperlinks to see if they color when moused over!
 https://www.w3schools.com/html/html_links.asp
