--- a/style.css
+++ b/style.css
@@ -1,12 +1,62 @@
 body {
-    background-color: powderblue;
     font-family: 'Source Sans Pro', sans-serif;
+    width: 100wh;
+	height: 90vh;
+	color: #fff;
+	background: linear-gradient(-45deg,  #2866ce, #6e28ce, #a523ac, #b60c73);
+	background-size: 400% 400%;
+	-webkit-animation: Gradient 20s ease infinite;
+	-moz-animation: Gradient 20s ease infinite;
+	animation: Gradient 20s ease infinite;
+}
 
+@-webkit-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@-moz-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+
+}
+a:link {
+    color:white
+}
+a:visited{
+    color:darkgray	
 }
 .tooltip {
     position: relative;
     display: inline-block;
 }
+
 
 .tooltip .tooltiptext {
     visibility: hidden;
@@ -35,9 +85,10 @@ img {
     border: 7px;
     border-radius: 50%;
 }
-#fadeName{
-    animation:1s ease 0.5s normal forwards 1 fadein; 
-    -webkit-animation:0.3s ease 0.3s normal forwards 1 fadein;
+
+#fadeName{   
+    animation:0.9s ease 0.5s normal forwards 1 fadein; 
+    -webkit-animation:0.9s ease 0.5s normal forwards 1 fadein;
     opacity: 0
     
     }
@@ -48,7 +99,23 @@ img {
     
     @-webkit-keyframes fadein{from{opacity:0}
     to{opacity:1}
+    }    
+ #fadeNav{
+    animation:1s ease 1.5s normal forwards 1 fadein; 
+    -webkit-animation:1 ease 1.5s normal forwards 1 fadein;
+    opacity: 0
+    
     }
+    
+    @keyframes fadein{from{opacity:0}
+    to{opacity:1}
+    }
+    
+    @-webkit-keyframes fadein{from{opacity:0}
+    to{opacity:1}
+    
+
+}
 
     #fadeAvatar{
         animation:1s ease 1s normal forwards 1 fadein; 
