--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ a:visited{
     visibility: hidden;
     width: 120px;
     background-color: transparent;
-    color: #000000;
+    color: #f2f2f2    ;
     text-align: right;
     border-radius: 6px;
     z-index: 1;
@@ -70,7 +70,7 @@ a:visited{
     left: 105%;
     font-weight: bold;
     
-    /* Fade in tooltip - takes 1 second to go from 0% to 100% opac: */
+    /* Fade in tooltip - takes 1 second to go from 0% to 100% opacity: */
     opacity: 0;
     transition: opacity 0.8s;
 }
