styling pictures, hopefully load picture

--- a/css/page.css
+++ b/css/page.css
@@ -1,12 +1,24 @@
     #container {
       display: inline-grid;
       grid-template-areas:
-        "build-top build-top"
+        "top top"
         "build-left build-right";
       grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
+      grid-template-rows: 25% 1fr 1fr;
     }
 
     #wave {
         padding-left: 10px;
+    }
+
+    #waveImg{
+    width: 450px;
+    height: 300px;
+    }
+
+    #header {
+      grid-area: top;
+      background-color: turquoise;
+      grid-row-start: 1;
+      grid-row-end: 1;
     }
