--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,6 +9,17 @@ ul {
 
 li {
     cursor: pointer;
-    list-style: none;
+}
+
+a:hover {
+    color: red;
+}
+
+a:link {
+    color: blue;
+}
+
+a:visited {
+    color: purple;
 }
 
