--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,11 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	text-align: center;
 }
+
+h1 {
+	color: #a40202;
+}
+
+h2 {
+	color: #e10000;
+}
