--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@
     }
 
     #header {
-
       background-color: turquoise;
       grid-row-start: 1;
       grid-row-end: 1;
@@ -41,7 +40,30 @@
       grid-row-start: 2;
     }
 
+    #info {
+      display: none;
+      margin-left: 20px;
+      grid-column-start: 3;
+      grid-row-start: 2;
+    }
+
     #buttons{
       grid-column-start: 1;
       grid-row-start: 3;
+    }
+
+    #filler{
+    background-color: turquoise;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    animation: random 5s infinite;
+    min-height: 200px;
+    }
+
+    @keyframes  random {
+    15% { background-color: palevioletred; } 
+    30% { background-color: turquoise; } 
+    45% { background-color: coral; } 
+    60% { background-color: cornflowerblue; }
+    75% { background-color: orange; }  
     }
