--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-body {
-    text-align: center;
-    align: center;
-    align-items: center;
-    background-color: e6ffe6;
-}
 h1, h2 {
     color: gray;
 }
@@ -38,4 +32,32 @@ a:hover {
 
 a:active {
     color: purple
+}
+
+
+
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+.about-me, body {
+    background-color: e6ffe6;
+    text-align: center;
+}
+
+.about-me h3 {
+    border-bottom: 1px solid #000;
+    display: inline-block;
+}
+
+.info {
+    height: 0;
+    overflow: hidden;
+}
+
+.info:target {
+    height: auto;
 }
