--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
 body {
     background-color: lightblue;
-    padding: 20%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+
+h1 {
+    text-align: center;
+}
+
+p {
+    text-align: center;
 }
