--- a/style.css
+++ b/style.css
@@ -13,3 +13,10 @@ h1 {
 h2 {
     margin-top: 10px;
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
