--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
-h1, h2 {
-    color: gray;
-}
-
-p, ul {
-    color: black;
+h1, h2, p, ul {
+    color: #262626;
 }
 
 ul {
@@ -13,28 +9,25 @@ ul {
     list-style-type: none
 }
 
-img {
-    height: 300;
-    object-fit: contain;
-}
-
 a:link {
-    color: red
+    color: #404040
 }
 
 a:visited {
-    color: blue
+    color: #262626;
 }
 
 a:hover {
-    color: green
+    color: #707070
 }
 
 a:active {
-    color: purple
+    color: #262626
 }
 
-
+a {
+    text-decoration: none;
+}
 
 
 * {
@@ -43,18 +36,41 @@ a:active {
     font-family: sans-serif;
 }
 
-.about-me, body {
-    background-color: e6ffe6;
+.page, body {
+    background-color: cceeff;
     text-align: center;
 }
 
-.about-me h3 {
-    border-bottom: 1px solid #000;
+.overview {
+    margin: 20px;
+}
+
+.overview h1 {
+    font-size: 28px;
+}
+
+.overview h2 {
+    font-size: 16px;
+}
+
+.overview img {
+    height: 300;
+    object-fit: contain;
+    margin: 10px;
+    border-radius: 10%;
+}
+
+.tab h3 {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    padding-bottom: 5px;
+    border-bottom: 2px solid #000000;
     display: inline-block;
 }
 
 .info {
-    height: 0;
+    height: 0px;
     overflow: hidden;
 }
 
