--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h2 {
 }
 p, th, td {
     font-family: 'Poppins', sans-serif;
+    font-size: 16px;
 }
 
 /* header */
@@ -161,14 +162,16 @@ footer {
 }
 body {
     display: grid;
-    grid-template-columns: 13vw 37vw 37vw 13vw;
+    grid-template-columns: 13vw 74vw 13vw;
     grid-template-areas:
-            ". name name ."
-            ". head classes ."
-            ". about_me classes ."
-            ". experience lived ."
-            ". map map ."
-            ". foot foot .";
+            ". name ."
+            ". head ."
+            ". about_me ."
+            ". classes ."
+            ". experience ."
+            ". lived ."
+            ". map ."
+            ". foot .";
 }
 
 @media (min-width: 950px){
@@ -181,33 +184,5 @@ body {
                 ". experience lived ."
                 ". map map ."
                 ". foot foot .";
-    }
-}
-@media (max-width: 949px) and (min-width: 400px){
-    body {
-        grid-template-columns: 13vw 74vw 13vw;
-        grid-template-areas:
-                ". name ."
-                ". head ."
-                ". about_me ."
-                ". classes ."
-                ". experience ."
-                ". lived ."
-                ". map ."
-                ". foot .";
-    }
-}
-@media (max-width: 399px) {
-    body {
-        grid-template-columns: 10px auto 10px;
-        grid-template-areas:
-                ". name ."
-                ". head ."
-                ". about_me ."
-                ". classes ."
-                ". experience ."
-                ". lived ."
-                ". map ."
-                ". foot .";
     }
 }
