--- a/style.css
+++ b/style.css
@@ -20,3 +20,10 @@ h2 {
     margin-right: auto;
     width: 50%;
 }
+
+button {
+    margin-left: auto;
+    margin-right: auto; 
+    color: rgb(255, 113, 70);
+    text-emphasis: bold;
+}
