--- a/style.css
+++ b/style.css
@@ -22,8 +22,6 @@ h2 {
 }
 
 button {
-    margin-left: auto;
-    margin-right: auto; 
-    color: rgb(255, 113, 70);
-    text-emphasis: bold;
+    background-color: rgb(255, 113, 70);
+    color: white;
 }
