--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ footer {
 }
 body {
     display: grid;
-    grid-template-columns: 13vw 74vw 13vw;
+    grid-template-columns: 3vw 94vw 3vw;
     grid-template-areas:
             ". name ."
             ". head ."
@@ -184,5 +184,20 @@ body {
                 ". experience lived ."
                 ". map map ."
                 ". foot foot .";
+    }
+}
+
+@media (max-width: 949px) and (min-width: 500px) {
+    body {
+        grid-template-columns: 13vw 74vw 13vw;
+        grid-template-areas:
+                ". name ."
+                ". head ."
+                ". about_me ."
+                ". classes ."
+                ". experience ."
+                ". lived ."
+                ". map ."
+                ". foot .";
     }
 }
