--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,14 @@ nav {
     float: right;
 }
 
+img {
+    width: 300px;
+    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
 a {
     display: block;
     color: #333;
