--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,9 +11,9 @@ ul {
     list-style-type:none
 }
 
-li {
-    cursor: pointer;
-}
+/*li {*/
+    /*cursor: pointer;*/
+/*}*/
 
 a:hover {
     color: red;
