--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,13 @@
     text-align: center;
 }
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
 div {
     list-style: none;
 }
