Add hyperlinks to courses

--- a/style.css
+++ b/style.css
@@ -36,6 +36,11 @@ p {
     font-size: 16px;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
 /* Container for tiles */
 .container {
     display: flex;
