--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,27 @@
 html {
 	background-color:  #ecf7f9;
-	max-width: 700px;
-	margin-top: 1em;
-    margin-left: 1em;
+	max-width: 800px;
+	margin: auto;
 }
 
 body {
 	font-family: "Verdana";
+}
+
+h1 {
+	font-family: "Cabin Sketch";
+	font-size: 50px;
+}
+
+#me {
+	border-radius: 50%;
+	float:right;
+}
+
+#techxp {
+	float:left;
+}
+
+#classhist {
+	float:right;
 }
