--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,13 @@ h1 {
 	float:right;
 }
 
+#AGD {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 500px;
+}
+
 #techxp {
 	float:left;
 }
